--- a/style.css
+++ b/style.css
@@ -38,4 +38,10 @@ div.css-keje6w.e1tzin5v2{
     text-align: center;
 }
 
-
+div.css-j5r0tf.e1tzin5v2{
+    
+    border: 1px solid #CCCCCC;
+    padding: 2% 2% 2% 2%;
+    border-radius: 5px;
+    text-align: center;
+}
